--- a/index.html
+++ b/index.html
@@ -1,28 +1,95 @@
-!DOCTYPE html>
-<html>
-	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
-	</body>
+<!DOCTYPE HTML>
+<html lang="pl">
+<head>
+	<meta charset="utf-8" />
+	<title>I SDH ,,Wilk, który nigdy nie śpi'' im gen R Baden-Powell'a</title>
+	<meta name="description" content="Strona internetowa 1 Strzeleckiej Drużyny Harcerskiej ,,Wilk, który nigdy nie śpi'' im gen R Baden-Powell'a" />
+	<meta name="keywords" content="zhp, harcerstwo, Strzelce, Opolskie, drużyna, starsza, starszoharcerska, hufiec, krapkowice" />
+	<meta html-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+	
+	<link rel="stylesheet" href="1sdh.github.io/css.html" type="text/css" />
+	
+	<style>
+	#container
+	{
+		text-align: center;
+		margine-left: auto;
+		margine-right: auto;
+	}
+	#logo
+	{
+		text-align: center;
+	}
+	#left
+	{
+		text-align: center;
+		width: 25%;
+		float: left;
+	}
+	#middleleft
+	{
+		text-align: center;
+		width:25%;
+		float: left;
+	}
+	#middleright
+	{
+		text-align: center;
+		width:25%;
+		float: left;
+	}
+	#right
+	{
+		text-align: center;
+		width:25%;
+		float : left;
+	}
+	</style>
+	
+</head>
+
+
+<body>
+	<div id="container">
+		<br/>
+		<br/>
+		<br/>
+		<br/>
+		<div id="logo">
+			<img src="https://gkzhp-my.sharepoint.com/personal/marek_musialik_zhp_net_pl/_layouts/15/guestaccess.aspx?docid=1bd7050b6e401458f9584f7075bc56d23&authkey=AVDReVYDHBG_jPDjDd6Pszs" alt="Aktualności" style="width:250px;height:250px;" />
+		</div>
+		<div id="cytat">
+		<br/>
+		<br/>
+		<br/>
+		<br/>
+		<br/>
+		<br/>
+		<br/>
+		<br/>
+		<br/>
+		</div>
+		<div id="left">
+			<img src="https://gkzhp-my.sharepoint.com/personal/marek_musialik_zhp_net_pl/_layouts/15/guestaccess.aspx?docid=137e7476ccc46452f89c147b215128996&authkey=AdrgIyHADxM9zDhB28XwuvY" alt="Aktualności" style="width:140px;height:140px;" />
+		</div>
+		
+		
+		<div id="middleleft">
+			<img src="https://gkzhp-my.sharepoint.com/personal/marek_musialik_zhp_net_pl/_layouts/15/guestaccess.aspx?docid=1da64f77e33e5452a971b0c7009c2f6b4&authkey=AUWoSzv0eboJgkg45SieiR8" alt="Dokumenty" style="width:140px;height:140px;" />
+		</div>
+		
+		
+		<div id="middleright">
+			<img src="https://gkzhp-my.sharepoint.com/personal/marek_musialik_zhp_net_pl/_layouts/15/guestaccess.aspx?docid=10b35bad15bec49e783af458b31985f8d&authkey=AZQm-AinJt_vYOT9f1EEq50" alt="Zdjęcia" style="width:140px;hight:140px;" />
+		</div>
+		</div>
+		
+		<div id="right">
+		 <img src="https://gkzhp-my.sharepoint.com/personal/marek_musialik_zhp_net_pl/_layouts/15/guestaccess.aspx?docid=12c3ac360b2a54b2aa2f0fb5aff5f4568&authkey=AWjpaQvJ9bHQvgBERtx1ERE" alt="Kontakt" style="width:140px;hitght:140px;" />
+		</div>
+
+</body>
+
+
+
 </html>
