--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="zhp, harcerstwo, Strzelce, Opolskie, drużyna, starsza, starszoharcerska, hufiec, krapkowice" />
 	<meta html-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
 	
-	<link rel="stylesheet" href="css/main.css" type="text/css" />
+	<link rel="stylesheet" href="main.css" type="text/css" />
 	
 	<style>
 	#container
